<resources>
    <string name="app_name">Sourdough Calcalculator</string>
    <string name="calculate_b">Calculate</string>
    <string name="flour">Flour (g)</string>
    <string name="water">Water (g)</string>
    <string name="starter">Starter (g)</string>
    <string name="salt">Salt (g)</string>
    <string name="edit_msg">Type in how much flour you want to use!</string>
    <string name="invalid_str" translatable="false">n/a</string>
    <string name="preferment_switch_off">With Preferment</string>
    <string name="preferment_switch_on">No Preferment</string>
    <string name="preferment_label">Preferment</string>
    <string name="dough_label">Dough</string>
</resources>
