<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <EditText
                android:id="@+id/flourET"
                android:layout_width="179dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/edit_msg"
                android:inputType="numberPassword"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.675"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:text="@string/flour"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/waterTV"
                android:layout_width="180dp"
                android:layout_height="22dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/water_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.701"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/water_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/water"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/water_label_leaven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="268dp"
                android:text="@string/water"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/water_leaven_TV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.538" />

            <TextView
                android:id="@+id/starter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/starter"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/water_label" />

            <TextView
                android:id="@+id/starter_label_leaven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="268dp"
                android:text="@string/starter"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/starter_leaven_TV"
                app:layout_constraintEnd_toStartOf="@+id/salt_label_leaven"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toEndOf="@+id/water_label_leaven"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.538" />

            <TextView
                android:id="@+id/salt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/salt"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starter_label" />

            <TextView
                android:id="@+id/salt_label_leaven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="46dp"
                android:text="@string/salt"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/salt_leaven_TV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.978" />

            <TextView
                android:id="@+id/starterTV"
                android:layout_width="180dp"
                android:layout_height="22dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/starter_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.701"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/leaven_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="204dp"
                android:showText="false"
                android:splitTrack="false"
                android:text="@string/leaven_switch_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saltTV"
                android:layout_width="180dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/salt_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.679"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/water_leaven_TV"
                android:layout_width="105dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/salt_leaven_TV"
                android:layout_width="105dp"
                android:layout_height="22dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/starter_leaven_TV"
                android:layout_width="105dp"
                android:layout_height="22dp"
                android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/salt_leaven_TV"
                app:layout_constraintStart_toEndOf="@+id/water_leaven_TV" />

            <TextView
                android:id="@+id/leaven_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="244dp"
                android:text="@string/leaven_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>